# MOS_Bruger

./: .gitignore  404.html  AI_ML_Features_Ideas.md  FRONTEND_IMPLEMENTATION.md  README.md  credentials.txt  index.html
assets/: AdminDashboard-6vzijf9B.js  (+158 more)
mos_rest_api/: pyproject.py  pyproject.toml  requirements.txt
mos_rest_api/mos_rest_api/: build.sh  build_riders.py  credentials.txt  find_region.py  get_all_sql.py  manage.py  mock_sql.py  populate_offers.py  populate_toppings.py  reset_users.py  seed_data.sql  seed_historical_forecast_data.py  setup_supabase.py  supabase_schema.sql  wipe_and_recreate_users.py
mos_rest_api/mos_rest_api/bike/: models.py  serializers.py  urls.py  views.py
mos_rest_api/mos_rest_api/bike/migrations/: 0001_initial.py
mos_rest_api/mos_rest_api/menu/: models.py  serializers.py  urls.py  views.py
mos_rest_api/mos_rest_api/menu/migrations/: 0001_initial.py  0002_menu_description.py  0003_topping_alter_menu_base_price_alter_menu_category_and_more.py  0004_category_description.py  0005_topping_count.py  0006_delete_menutopping_delete_topping.py  0007_promotion.py  0008_category_icon.py
mos_rest_api/mos_rest_api/mos_rest_api/: asgi.py  settings.py  urls.py  wsgi.py
mos_rest_api/mos_rest_api/orders/: forecasting.py  models.py  serializers.py  urls.py  views.py
mos_rest_api/mos_rest_api/orders/migrations/: 0001_initial.py  0002_fix_orderitemtopping_schema.py  (+2 more)
mos_rest_api/mos_rest_api/toppings/: models.py  serializers.py  urls.py  views.py
mos_rest_api/mos_rest_api/users/: apps.py  models.py  serializers.py  views.py
(+49 files in other folders)
