[project]
name = "Mos_Burger"
version = "0.1.0"
description = "Mos_Burger_Backend"
dependencies = [
    "Django==5.0.3",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "PyJWT==2.8.0",
    "mysqlclient==2.2.7",
    "tzdata==2024.1",
    "statsmodels==0.14.5",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "dj-database-url==2.1.0",
    "django-cors-headers==4.3.1",
]
